--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <style>
 
 @font-face {
-      font-family: 'lastica_regular';
-      src: url('assets/lastica_regular.37fa8fcc9a4e1b551b65632d.21fc3cdd550be8c20112ca8b2efcc762.ttf');
+      font-family: 'Norwester';
+      src: url('assets/Norwester.7bf226306214181d5e917ed5bda230.9494f841057c7b5cda3da2221562752f.otf');
     }
 body{
   margin:0;
-  font-family: 'lastica_regular', sans-serif;
+  font-family: 'Norwester', sans-serif;
   color:#f5d27a;
 }
 
